mash: Use null AcceleratedWidget for widgets in tests

When running in tests, the ui::ContextFactory creates test
contexts that do not support real GL operations. Some of the
code (e.g. InProcessContextProvider) expects a null widget
for ui::Compositor::widget() in this situation. So update
WindowTreeHostMus to follow this.

Also, re-enable the tests, and make sure the test context
factory are destroyed correctly during test tear-down.

BUG=652871

Review-Url: https://codereview.chromium.org/2409053002
Cr-Commit-Position: refs/heads/master@{#424515}

Former-commit-id: c2df26e737f98f72f03dfe4ac1fe1ea91545bab2